fix(Container): fix overflow style (#568)

--- a/src/Container/ContainerHeader/index.less
+++ b/src/Container/ContainerHeader/index.less
@@ -32,15 +32,14 @@
     .@{containerPrefix}-header-title:empty+.@{containerPrefix}-header-right:not(:empty){
       flex: 1;
     }
-  }
-
-  &-headerInBox {
-    background-color: @container-background-color;
-    padding: 0 @container-spacing;
-    .@{containerPrefix}-header-title,
-    .@{containerPrefix}-header-right{
-      position: relative;
-      .hairline('bottom');
+    &-headerInBox {
+      padding: 0 @container-spacing;
+      .@{containerPrefix}-header-title,
+      .@{containerPrefix}-header-right{
+        position: relative;
+        .hairline('bottom');
+      }
     }
   }
+
 }
